--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: story_app
-description: Üniversite Tezi için hazırlanan bir hikaye platform uygulaması
+description: ...
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
