--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   floating_action_bubble: ^1.1.4
   flutter_arc_speed_dial: ^2.0.1
   google_fonts: ^3.0.1
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +65,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/foto.jpeg
+    - assets/images/
     - assets/data/story.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
