--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   shared_preferences: ^2.0.15
   json_annotation: ^4.8.0
   build_runner: ^2.3.3
+  flame_audio: ^1.4.0
+  firebase_database: ^10.0.15
+  firebase_core: ^2.7.1
+  just_audio: ^0.9.31
+  flutter_tts: ^3.6.3
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +74,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/musics/
     - assets/data/story.json
     - assets/data/choicesHistory.json
 
