--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_core: ^2.7.1
   just_audio: ^0.9.31
   flutter_tts: ^3.6.3
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
